[package]
name = "later"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
dirs = "4.0"
rustyline = "9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
