[package]
name = "later"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
dirs = "4.0"
rustyline = "9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
